vlib/v/parser/tests/closure_not_declared.out
vlib/v/parser/tests/closure_not_declared.vv:4:9: error: `a` must be explicitly listed as inherited variable to be used inside a closure
    2 |     a := 1
    3 |     f := fn () {
    4 |         print(a)
      |               ^
    5 |     }
    6 |     f()
Details: use `fn [a] () {` instead of `fn () {`
vlib/v/parser/tests/closure_not_declared.vv:4:3: error: `print` can not print void expressions
    2 |     a := 1
    3 |     f := fn () {
    4 |         print(a)
      |         ~~~~~~~~
    5 |     }
    6 |     f()
vlib/v/parser/tests/closure_not_declared.vv:4:9: error: undefined ident: `a`
    2 |     a := 1
    3 |     f := fn () {
    4 |         print(a)
      |               ^
    5 |     }
    6 |     f()
