vlib/v/parser/tests/closure_not_declared.vv
fn my_fn() {
	a := 1
	f := fn () {
		print(a)
	}
	f()
	_ = a
}
